# Music-Sharing-API

./: README.md  main.py  pyproject.toml
src/: __init__.py  app.py  container.py
src/application/: AccountService.py
src/domain/: Account.py
src/domain/repositories/: IAccount.py
src/infrastructure/api/: setup.py
src/infrastructure/api/controllers/: AccountController.py
src/infrastructure/api/schemas/: AccountSchemas.py
src/infrastructure/database/: AccountRepository.py
